Switch RPC to WorkerGroup route and DIRECT flow
Moves RPC from `/api/v1/tasks/{taskId}/items:call` to `/api/v1/worker-groups/{workerGroupId}/items:call`, with server-side mapping to deterministic long-lived ITEM_DRIVEN tasks per configured group. The integration runner now calls by WorkerGroup (no worker registration/targeting), validates 60 group-scoped results separately from 20 persistent worker identities, and updates response shape to remove internal task/worker coordinates.

Also changes ITEM_DRIVEN scheduling semantics from TARGETED to DIRECT: empty `allocationRule` (`{}`) is now valid and means unrestricted selection within the WorkerGroup via bounded HOT query, while explicit workerId rules keep bounded point selection. Kernel/Server code, tests, and docs were updated to match this contract.